[gd_scene load_steps=7 format=2]

[ext_resource path="res://EnvTilesetPNG/Dhood Custom Indoor Assets.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Toilet.gd" type="Script" id=2]
[ext_resource path="res://Scripts/talk_button.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.49729, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.9484, 28.6175 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Toilet" type="Sprite"]
position = Vector2( -0.7547, -0.754704 )
texture = ExtResource( 1 )
vframes = 8
hframes = 12
frame = 20
script = ExtResource( 2 )
interaction_script = "res://dialogues/Toilet1.json"

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -0.230881, 47.9645 )
texture = ExtResource( 1 )
vframes = 8
hframes = 12
frame = 31

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( -0.230881, 47.9645 )
texture = ExtResource( 1 )
vframes = 8
hframes = 12
frame = 32

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.429276, 47.1722 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 23.6664 )
shape = SubResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 0, 15.6055 )
scale = Vector2( 1.8, 2.08 )
shape = SubResource( 3 )
script = ExtResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
